--- a/prj_lnk/lnk-it.htm
+++ b/prj_lnk/lnk-it.htm
@@ -316,7 +316,7 @@
       <article class="btn-after">
          <h2>IT News</h2>
             <a class="btn_lnk_1" href="https://www.makeuseof.com/" target="_blank">makeuseof</a>
-            <a class="btn_lnk_1" href="" target="_blank"></a>
+            <a class="btn_lnk_1" href="https://www.christitus.com/" target="_blank">christitus</a>
             <a class="btn_lnk_1" href="" target="_blank"></a>
             <a class="btn_lnk_1" href="" target="_blank"></a>
             <a class="btn_lnk_1" href="" target="_blank"></a>
@@ -347,7 +347,7 @@
             <summary><h3>Outlook</h3></summary>
                <a class="btn_lnk_1" href="https://support.office.com/en-us/article/repair-outlook-data-files-pst-and-ost-25663bc3-11ec-4412-86c4-60458afc5253" 
                   target="_blank">Repair Outlook Data Files</a>
-               <a class="btn_lnk_1" href="" target="_blank"></a>
+               <a class="btn_lnk_1" href="https://support.microsoft.com/en-us/help/4092694/windows-10-file-sharing-over-a-network" target="_blank">windows-10</a>
                <a class="btn_lnk_1" href="" target="_blank"></a>
                <a class="btn_lnk_1" href="" target="_blank"></a>
                <a class="btn_lnk_1" href="" target="_blank"></a>
@@ -426,7 +426,7 @@
          <h2>devOps</h2>
             <a class="btn_lnk_1" href="https://chocolatey.org/" target="_blank">chocolatey</a>
             <a class="btn_lnk_1" href="https://chocolatey.org/packages" target="_blank">packages</a>
-            <a class="btn_lnk_1" href="" target="_blank"></a>
+            <a class="btn_lnk_1" href="https://www.guru99.com/complete-web-application-testing-checklist.html" target="_blank">guru99</a>
             <a class="btn_lnk_1" href="" target="_blank"></a>
             <a class="btn_lnk_1" href="" target="_blank"></a>
       </article>
