--- a/prj_site_1/index.html
+++ b/prj_site_1/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/site_1.css">
+    <link rel="stylesheet" href="css/main.css">
 <title>Кошка Масяня</title>
     </head>
     
