--- a/patternsWeb/tm_js.htm
+++ b/patternsWeb/tm_js.htm
@@ -10,4 +10,8 @@
       element.src = "myScript.js";
       document.body.appendChild(element);
     };
-</script> 
+</script>
+
+<div onmousedown="return false" onselectstart="return false">
+  Text selection is disabled for this text.
+</div>
