--- a/patternsWeb/tm_layout.htm
+++ b/patternsWeb/tm_layout.htm
@@ -1,5 +1,12 @@
 <!DOCTYPE html><html><head>
-
+<style>
+    body {
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+        }
+</style>
     <style>
         /* background */
             * {box-sizing:border-box;}
