--- a/json-data-retrive/index.html
+++ b/json-data-retrive/index.html
@@ -4,10 +4,14 @@
     <p id="invoke"></p>
     <p id="json-dt"></p>
 
+    <div id="tst-lnks">
+
+    </div>
+
     <h2>code web tools</h2>
-        <a id='lnk' class="btn_lnk_1 code_web_tools" href="#" target="_blank">discord</a>
+        <a id='lnk' class="btn_lnk_1 code_web_tools" href="#" target="_blank"></a>
         <a class="btn_lnk_1 code_web_tools" href="" target="_blank">dartpad</a>
-        <a class="btn_lnk_1" href="" target="_blank"></a>
+        <a class="btn_lnk_1 code_web_tools" href="" target="_blank"></a>
         <a class="btn_lnk_1" href="" target="_blank"></a>
         <a class="btn_lnk_1" href="" target="_blank"></a>
 
