--- a/js.html
+++ b/js.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html><html>
     <head>
         <meta charset='UTF-8'>
         <title>Cars</title>
     </head>
+    
     <body>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script>
@@ -15,5 +15,4 @@
             var tesla = new Car(10, 20);
             
         </script>
-    </body>
-</html>
+</body></html>
