--- a/js/template.html
+++ b/js/template.html
@@ -104,7 +104,7 @@
 	        stickies.appendChild(sticky);
 
             // delete by id
-            sticky.onclick = deleteSticky;
+            sticky.ondrag = deleteSticky;
         }
 
         function createSticky_1() {
