--- a/interface/other.htm
+++ b/interface/other.htm
@@ -16,17 +16,14 @@
 </pre>
 
 
-
 <h2>table of contents</h2>
 
 
 <h2>Collapse</h2>
-    <details>
-        <summary>Summary</summary>
+    <details><summary>Summary</summary>
             <p>Detailed content goes here …</p>
     </details>
-    <details>
-        <summary>Summary</summary>
+    <details><summary>Summary</summary>
             <p>Detailed content goes here …</p>
     </details>
 
@@ -35,5 +32,6 @@
     <p>Here is a quote from WWF's website:</p>
     
     <blockquote cite="http://www.worldwildlife.org/who/index.html">
-    For 50 years, WWF has been protecting the future of nature. The world's leading conservation organization, WWF works in 100 countries and is supported by 1.2 million members in the United States and close to 5 million globally.
+    For 50 years, WWF has been protecting the future of nature. The world's leading conservation organization, 
+    WWF works in 100 countries and is supported by 1.2 million members in the United States and close to 5 million globally.
     </blockquote>
