--- a/prjs/prj-layout/1.htm
+++ b/prjs/prj-layout/1.htm
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/reset.css">
     <link rel="stylesheet" href="1.css">
+    <script>
+      import React from "https://esm.sh/astro"
+    </script>
   </head>
 
   <body class="container">
